--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -3,6 +3,11 @@ spring:
     name: intelligent-chat-buddy
   profiles:
     active: local
+  datasource:
+    driver-class-name: com.mysql.cj.jdbc.Driver
+    url: jdbc:mysql://localhost:3306/intelligent_chat_buddy
+    username: root
+    password: root
 server:
   port: 8020
   servlet:
@@ -24,4 +29,3 @@ knife4j:
   enable: true
   setting:
     language: zh_cn
-
