day9 1.MCP客户端开发 2.MCP服务端开发 3.图片搜索MCP服务开发 4.MCP服务本地部署和远程部署 5.AI智能体学习 6.AI智能体BaseAgent实现

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -12,8 +12,12 @@ spring:
         max-document-batch-size: 10000 # Optional: Maximum number of documents per batch
     mcp:
       client:
-        stdio:
-          servers-configuration: classpath:mcp-servers.json
+        sse:
+          connections:
+            server1:
+              url: http://localhost:8127
+#        stdio:
+#          servers-configuration: classpath:mcp-servers.json
 server:
   port: 8020
   servlet:
